z-index fixed in checkout

--- a/front/app/src/components/Checkout/Checkout.css
+++ b/front/app/src/components/Checkout/Checkout.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: flex-start;
     margin: 2rem;
+    /* z-index: -55; */
 }
 .check-right {
      display:flex;
@@ -15,6 +16,7 @@
 
 .map {
     box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);
+    z-index: 0;
 }
 
 .check input {
